@@ -18,6 +18,9 @@ CHANGES INTRODUCED IN XINS 0.213:                                (1.0.0-beta6)
   - Fixed the PCDATA set in the data section was not parsed correctly.
   - Fixed some Checkstyle-reported issues, like missing Javadoc comments.
 
+* Generated client-side Java code (CAPI):
+  - Set the getXINSVersion() method as static method.
+
 ______________________________________________________________________________
 CHANGES INTRODUCED IN XINS 0.212:                                (1.0.0-beta5)
 
